replace JavaFX frontend with React